--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/node": "24.5.1",
     "@vercel/kv": "3.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "lucide-react": "0.544.0",
     "nanoid": "5.1.5",
     "react": "19.1.1",
