--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "@types/node": "24.5.1",
     "@vercel/kv": "3.0.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@vercel/speed-insights": "1.2.0",
     "lucide-react": "0.544.0",
     "nanoid": "5.1.5",
+    "next": "15.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-router-dom": "7.9.1"
