--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/node": "24.5.1",
+    "@upstash/redis": "^1.35.4",
     "@vercel/kv": "3.0.0",
     "@vercel/speed-insights": "1.2.0",
     "lucide-react": "0.544.0",
