--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2.57.4",
     "@types/node": "24.5.1",
-    "@upstash/redis": "^1.35.4",
-    "@vercel/kv": "3.0.0",
     "@vercel/speed-insights": "1.2.0",
     "lucide-react": "0.544.0",
     "nanoid": "5.1.5",
@@ -29,6 +28,7 @@
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "@vitejs/plugin-react": "5.0.0",
+    "dotenv": "^17.2.2",
     "eslint": "9.33.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
